syntax = "proto3";

import "util/tracing/proto/tracing.proto";

option go_package = "sigmaos/apps/hotel/proto";

service Reserve {
  rpc MakeReservation(ReserveReq) returns (ReserveRep);
  rpc CheckAvailability(ReserveReq) returns (ReserveRep);
}

message ReserveReq {
	string          customerName = 1;
	repeated string hotelId = 2;
	string          inDate = 3;
	string          outDate = 4;
	int32           number = 5;
  SpanContextConfig spanContextConfig = 6;
}

message ReserveRep {
  repeated string hotelIds = 1;
}
